edgecloud 2997-  [Monitoring] Fix monitoring page layout when you expand/collapse mobiledgex left panel (#468)
edgecloud 2997- [Monitoring] Fix monitoring page layout when you expand/collapse mobiledgex left panel

--- a/src/sites/siteFour/monitoring/common/PageMonitoringStyles.css
+++ b/src/sites/siteFour/monitoring/common/PageMonitoringStyles.css
@@ -829,4 +829,34 @@ tr td {
     scrollbar-width: thin !important;
 }
 
+.ant-select-selector {
+    height: 30px !important;
+}
+
+.ant-select-tree-checkbox-indeterminate .ant-select-tree-checkbox-inner::after {
+    background-color: #F4F9EF;
+}
+
+
+.ant-select-tree-checkbox-indeterminate .ant-select-tree-checkbox-inner::after {
+    background-color: #F4F9EF !important;
+}
+
+
+.ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    background-color: dimgrey !important;
+}
+
+
+.ant-select-multiple .ant-select-selection-item {
+    background: #353535 !important;
+    border: 1px solid #55616b !important;
+    border-radius: 2px;
+}
+
+
+.ant-select-disabled.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+    background: #23232E !important;
+}
+
 
